[project]
name = "wikijs-cli"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fusepy>=3.0.1",
    "mfusepy>=3.1.1",
    "prompt-toolkit>=3.0.52",
    "pyicu>=2.16",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "rassumfrassum>=0.3.3",
    "ruff>=0.15.8",
    "ty>=0.0.27",
]

[tool.uv]
# or `uv.toml`
link-mode = "symlink"
